3.4.0 (unreleased)
------------------

- Issue-2143: Make Bika API work with DX types properly
- LIMS-2449: Thermo Qtegra results importer
- Lab Supervisor field on the Laboratory(Bika Setup - Laboratory Information)


3.3.0 (unreleased)
------------------

- Issue-2132: Reorderable Attachments for Reports
- Issue-2129: Migrate Attachments to blobs
- Issue-2098: Inline rendered Attachments not in final PDF
- LIMS-2596:  AR and Sample view fields that need to stay editable
- Issue-2128: Infinite Recursion on Report Publication
- Issue-2095: Permission of getAccreditationBodyLogo
- Issue-2065: Sort order on all landing pages are broken
- Issue-2081: Fixed multiple partition creation from ARTemple
- Issue-2089: Bika Listing display columns uses localized column headers in Cookie
- Issue-2063: Batch Book raises an Error if the Batch inherits from 2 ARs
- Issue-2062: Worksheet raises Error on `add_duplicate` view
- Issue-2011: Client Folder Listing Table decreases Bika LIMS performance and is unusable for many Clients
- Issue-2068: Member Discount is always applied on adding new ARs
- Issue-2052: Computed Sample Field "SampleTypeUID" does not check if a SampleType is set


3.2.1b2 (2017-05-27)
--------------------

- Fixed broken release


3.2.1b1 (2017-05-26)
--------------------

- Issue-2024: Worksheet Template table header in Layout not translated
- Issue-1973: Published PDF reports are visible by anonymous users
- Issue-1976: Publication Report "bydepartment" raises an Error
- Issue-2001: Custom Accreditation Logo not visible (Unauthorized)
- Issue-2010: Bika Listing Table: "Show More" button disappears
- Issue-2012: AR Template Analysis don't get applied if an Analysis Profile is selected
- Issue-2015: Copy AS functionality from the "bika_analysisservices" view raises an error
- Issue-1974: Clicking on the "Arrow Button" of an empty cell in the AR Add View causes a JS Error and endless Spinner
- issue-1992: Data Duplication between Analysis Requests and Samples